2011-05-26    <zag@manzanillo>

	* models/sample/dna_sample.ome.xml: Removed all the nanodrop
	details, they should be provided as a DataResult produced by a
	NanoDrop device.

2011-05-24    <zag@manzanillo>

	* tests/bl/vl/individual/kb/test_ikb.py
	(TestIKB.create_individual_sample_chain): disabled since it was
	using get_root.

	* tests/bl/vl/sample/kb/test_skb_extended.py
	(TestSKBExtended.check_object): disabled. It will not work, since
	we have dropped proxy_indexed.

	* bl/vl/sample/kb/drivers/omero/sample.py (DataSample): patched to
	map label to name. This is a bug in the DataSample model.

	* bl/vl/sample/kb/drivers/omero/wrapper.py (OmeroWrapper.unload):
	Added support for omero object unloading. It is an experiment.

2011-05-23    <zag@manzanillo>

	* bl/vl/sample/kb/drivers/omero/samples_container.py
	(DataCollection.__setup__): label disabled.

	* bl/vl/app/importer/data_collection.py (Recorder.__init__):
	disabled data_collection.label as a temporary measure before we
	sync the server on the new models.

2011-05-21    <zag@manzanillo>

	* bl/vl/app/importer/data_sample.py
	(import_data_sample_implementation): added a default-contrast-qc
	flag.

2011-05-18    <zag@manzanillo>

	* bl/vl/app/importer/data_collection.py (Recorder): moved
	default_study handling to core.

	* bl/vl/sample/kb/drivers/omero/dependency_tree.py
	(DependencyTree): Added as a more general (albeit slower)
	replacement to proxy_index indexing functions.

2011-05-17    <zag@manzanillo>

	* bl/vl/sample/kb/drivers/omero/proxy_core.py
	(ProxyCore.find_all_by_query): Now we have a factory controlled
	object wrapping. It is a hack, it should converge to the general
	proxy class.

	* bl/vl/individual/pedigree.py (import_pedigree): people can have
	children with more than one partner...
	(import_pedigree): oops, forgot to properly mark
	founder-non-founder families.

2011-05-13    <zag@manzanillo>

	* tests/bl/vl/sample/kb/skb_object_creator.py (SKBObjectCreator.create_data_collection): 