@@ -9,6 +9,7 @@ import action
 import vessels
 import data_samples
 import actions_on_target
+import individual
 
 KOK = MetaWrapper.__KNOWN_OME_KLASSES__
 
